Kubernetes/jmaze-k8s-cilium/media/tautulli/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
spec:
  type: ClusterIP
  publishNotReadyAddresses: false
  ports:
    - name: main
      port: 8181
      protocol: TCP
      targetPort: 8181
  selector:
    pod.name: main
    app.kubernetes.io/name: tautulli
    app.kubernetes.io/instance: tautulli
